Fix carouselNav z-index

--- a/src/style.css
+++ b/src/style.css
@@ -383,7 +383,7 @@ header {
   transform: translateX(-50%) translateY(5%);
   white-space: nowrap;
   display: none;
-  z-index: 10;
+  z-index: 1;
 }
 
 .tooltip.show {
@@ -474,8 +474,7 @@ header {
   align-self: center;
   justify-self: center;
   gap: 20px;
-  overflow: hidden;
-  /* z-index: 10; */
+  overflow: visible;
 }
 
 .lightbox {
@@ -524,7 +523,7 @@ header {
 #dialog::backdrop {
   background-color: black;
   opacity: 0.7;
-  z-index: 0;
+  z-index: none;
 }
 
 .closeModal {
@@ -554,9 +553,9 @@ header {
   height: 50px;
   transform: translateY(450%);
   align-content: center;
-  align-items: center;
+  align-self: auto;
   text-align: center;
-  z-index: 100;
+  z-index: 10;
   cursor: pointer;
 }
 
@@ -564,13 +563,11 @@ header {
   width: max-content;
 }
 .carouselBtns#previous {
-  left: 0px;
-  z-index: 10;
+  left: -20px;
 }
 
 .carouselBtns#next {
-  right: 0;
-  z-index: 10;
+  right: -20px;
 }
 
 .carouselBtns:hover {
